--- a/_modules/datasift.html
+++ b/_modules/datasift.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>datasift &mdash; DataSift Python Client Library 0.5.1 documentation</title>
+    <title>datasift &mdash; DataSift Python Client Library 0.5.3 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.5.1',
+        VERSION:     '0.5.3',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <link rel="top" title="DataSift Python Client Library 0.5.1 documentation" href="../index.html" />
+    <link rel="top" title="DataSift Python Client Library 0.5.3 documentation" href="../index.html" />
     <link rel="up" title="Module code" href="index.html" /> 
   </head>
   <body>
@@ -38,7 +38,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">DataSift Python Client Library 0.5.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">DataSift Python Client Library 0.5.3 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
     </div>  
@@ -68,7 +68,7 @@
 
 <span class="n">__author__</span>  <span class="o">=</span> <span class="s">&quot;Stuart Dallas &lt;stuart@3ft9.com&gt;&quot;</span>
 <span class="n">__status__</span>  <span class="o">=</span> <span class="s">&quot;beta&quot;</span>
-<span class="n">__version__</span> <span class="o">=</span> <span class="s">&quot;0.5.2&quot;</span>
+<span class="n">__version__</span> <span class="o">=</span> <span class="s">&quot;0.5.3&quot;</span>
 <span class="n">__date__</span>    <span class="o">=</span> <span class="s">&quot;30 August 2012&quot;</span>
 
 <span class="c">#-----------------------------------------------------------------------------</span>
@@ -818,7 +818,8 @@
                     <span class="s">&#39;start&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_start</span><span class="p">,</span>
                     <span class="s">&#39;end&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_end</span><span class="p">,</span>
                     <span class="s">&#39;name&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_name</span><span class="p">,</span>
-                    <span class="s">&#39;sources&#39;</span><span class="p">:</span> <span class="s">&#39;,&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_sources</span><span class="p">)</span>
+                    <span class="s">&#39;sources&#39;</span><span class="p">:</span> <span class="s">&#39;,&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_sources</span><span class="p">),</span>
+                    <span class="s">&#39;sample&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_sample</span>
                 <span class="p">})</span>
 
             <span class="k">if</span> <span class="ow">not</span> <span class="s">&#39;id&#39;</span> <span class="ow">in</span> <span class="n">res</span><span class="p">:</span>
@@ -1631,7 +1632,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">DataSift Python Client Library 0.5.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">DataSift Python Client Library 0.5.3 documentation</a> &raquo;</li>
           <li><a href="index.html" >Module code</a> &raquo;</li> 
       </ul>
     </div>
