--- a/_modules/datasift/client.html
+++ b/_modules/datasift/client.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>datasift.client &mdash; datasift 2.0.7-beta documentation</title>
+    <title>datasift.client &mdash; datasift 2.0.8 documentation</title>
     
     <link rel="stylesheet" href="../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '2.0.7-beta',
+        VERSION:     '2.0.8',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <link rel="top" title="datasift 2.0.7-beta documentation" href="../../index.html" />
+    <link rel="top" title="datasift 2.0.8 documentation" href="../../index.html" />
     <link rel="up" title="Module code" href="../index.html" /> 
   </head>
   <body>
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.0.7-beta documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.0.8 documentation</a> &raquo;</li>
           <li><a href="../index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
     </div>  
@@ -92,47 +92,7 @@
 <span class="sd">        :ivar historics_preview: instance of :class:`~datasift.historics_preview.HistoricsPreview`</span>
 <span class="sd">        :ivar managed_sources: instance of :class:`~datasift.managed_sources.ManagedSources`</span>
 
-<span class="sd">        Can be used to do simple operations::</span>
-
-<span class="sd">            client = Client(config)</span>
-
-<span class="sd">            csdl = &#39;interaction.content contains &quot;python&quot;&#39;</span>
-
-<span class="sd">            if client.is_valid(csdl):</span>
-<span class="sd">                response = client.compile(csdl)</span>
-<span class="sd">                stream = response[&#39;hash&#39;]</span>
-
-<span class="sd">        or used in live consumption mode::</span>
-
-<span class="sd">            ds = Client(config)</span>
-
-<span class="sd">            @ds.on_delete</span>
-<span class="sd">            def on_delete(interaction):</span>
-<span class="sd">                print &#39;Deleted interaction %s &#39; % interaction</span>
-
-<span class="sd">            @ds.on_open</span>
-<span class="sd">            def on_open():</span>
-<span class="sd">                print &#39;Streaming ready, can start subscribing&#39;</span>
-<span class="sd">                csdl = &#39;interaction.content contains &quot;music&quot;&#39;</span>
-<span class="sd">                stream = ds.compile(csdl)[&#39;hash&#39;]</span>
-
-<span class="sd">                @ds.subscribe(stream)</span>
-<span class="sd">                def subscribe_to_hash(msg):</span>
-<span class="sd">                    print msg</span>
-
-
-<span class="sd">            @ds.on_closed</span>
-<span class="sd">            def on_close(wasClean, code, reason):</span>
-<span class="sd">                print &#39;Streaming connection closed&#39;</span>
-
-
-<span class="sd">            @ds.on_ds_message</span>
-<span class="sd">            def on_ds_message(msg):</span>
-<span class="sd">                print &#39;DS Message %s&#39; % msg</span>
-
-<span class="sd">            #must start stream subscriber</span>
-<span class="sd">            ds.start_stream_subscriber()</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="sd">   &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="k">class</span> <span class="nc">Config</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
             <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">user</span><span class="p">,</span> <span class="n">apikey</span><span class="p">,</span> <span class="n">ssl</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span> <span class="n">proxies</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">timeout</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">verify</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
@@ -474,7 +434,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.0.7-beta documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.0.8 documentation</a> &raquo;</li>
           <li><a href="../index.html" >Module code</a> &raquo;</li> 
       </ul>
     </div>
