--- a/_modules/datasift/client.html
+++ b/_modules/datasift/client.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>datasift.client &mdash; datasift 2.0.8 documentation</title>
+    <title>datasift.client &mdash; datasift 2.0.11 documentation</title>
     
     <link rel="stylesheet" href="../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '2.0.8',
+        VERSION:     '2.0.11',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <link rel="top" title="datasift 2.0.8 documentation" href="../../index.html" />
+    <link rel="top" title="datasift 2.0.11 documentation" href="../../index.html" />
     <link rel="up" title="Module code" href="../index.html" /> 
   </head>
   <body>
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.0.8 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.0.11 documentation</a> &raquo;</li>
           <li><a href="../index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
     </div>  
@@ -63,6 +63,7 @@
 <span class="kn">from</span> <span class="nn">datasift.historics_preview</span> <span class="kn">import</span> <span class="n">HistoricsPreview</span>
 <span class="kn">from</span> <span class="nn">datasift.managed_sources</span> <span class="kn">import</span> <span class="n">ManagedSources</span>
 <span class="kn">from</span> <span class="nn">datasift.live_stream</span> <span class="kn">import</span> <span class="n">LiveStream</span><span class="p">,</span> <span class="n">LiveStreamFactory</span>
+<span class="kn">from</span> <span class="nn">datasift.list</span> <span class="kn">import</span> <span class="n">List</span>
 
 <span class="kn">from</span> <span class="nn">six.moves.urllib.parse</span> <span class="kn">import</span> <span class="n">urlencode</span>
 
@@ -114,6 +115,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">historics</span> <span class="o">=</span> <span class="n">Historics</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">historics_preview</span> <span class="o">=</span> <span class="n">HistoricsPreview</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">managed_sources</span> <span class="o">=</span> <span class="n">ManagedSources</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">list</span> <span class="o">=</span> <span class="n">List</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="p">)</span>
         <span class="c"># Initialize callbacks</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_on_delete</span> <span class="o">=</span> <span class="bp">None</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_on_open</span> <span class="o">=</span> <span class="bp">None</span>
@@ -434,7 +436,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.0.8 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.0.11 documentation</a> &raquo;</li>
           <li><a href="../index.html" >Module code</a> &raquo;</li> 
       </ul>
     </div>
